@@ -1,3 +1,7 @@
+2006-02-27  Kouhei Yanagita <yanagi@shakenbu.org>
+	* hiki/plugin.rb (cookie_path): fix the bug of breaking the path of the cookie
+	when base_url is specified (closes #56).
+
 2006-02-18  Kouhei Yanagita <yanagi@shakenbu.org>
 	* misc/plugin/show_plugins.rb: add a comment.
 
